feat: add dev route and regenerate swagger
